# Lab-8

./: CMakeLists.txt
task1/: CMakeLists.txt  func1.cpp  func1.h  main.cpp
task2/: CMakeLists.txt  func2.cpp  func2.h  main.cpp
task3/: CMakeLists.txt  func3.cpp  main.cpp
